<resources>
    <string name="app_name">New York Times Search</string>
    <string name="action_settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="news_desk">News desk</string>
    <string name="save">Save</string>

    <string name="arts">Arts</string>
    <string name="fashion_and_style">Fashion and style</string>
    <string name="sports">Sports</string>
    <string name="any">Any</string>


    <string-array name= "sort_order_array">
        <item>newest</item>
        <item>oldest</item>
    </string-array>
</resources>
